<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/card_background">

        <!-- Circle number -->
        <TextView
            android:id="@+id/tvItemNumber"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/light_button_purple"
            android:background="@drawable/circle_drawable"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/button_purple"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Item name -->
        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/list_item"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnEdit"
            app:layout_constraintStart_toEndOf="@id/tvItemNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Edit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:text="@string/edit"
            android:textColor="@color/button_purple"
            app:backgroundTint="@android:color/transparent"
            app:strokeColor="#CCC"
            app:strokeWidth="1dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@id/btnDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Delete Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:textColor="@color/button_purple"
            app:backgroundTint="@color/light_button_purple"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
