<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple_background"
    tools:context="com.felicianowilliam.cs360projecttwo.AddItemActivity">

    <!--Toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Add Inventory Item"
            android:background="@color/white"
            app:titleTextColor="@color/button_purple"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/button_purple"
            app:menu="@menu/toolbar_menu"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <!--Card-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAddEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <!--Item Name-->
                    <TextView
                        android:id="@+id/labelItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/primary_text_color"
                        android:textSize="14sp"
                        android:layout_marginBottom="4dp"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilItemName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"> <!-- Disable default hint since we have a label -->

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextItemName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/item_name"
                            android:inputType="textCapWords"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Quantity-->
                    <TextView
                        android:id="@+id/labelItemQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/primary_text_color"
                        android:textSize="14sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilItemQuantity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextItemQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <!--Add Item-->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonSaveItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/add_item"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"
                        android:backgroundTint="@color/button_purple"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
